--- a/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.css
+++ b/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.css
@@ -61,7 +61,7 @@
   bottom: 20px;
 }
 #mediaquerieswatcher.bottom-right {
-  left: 20px;
+  right: 20px;
   bottom: 20px;
 }
 #mediaquerieswatcher .buttons,
