--- a/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.less
+++ b/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.less
@@ -1,5 +1,5 @@
 @boxWidth: 300px;
-@mainColor:#631e2f;
+@mainColor:rgba(99, 30, 47, 0.7);
 @secondaryColor:#993256;
 @fontColor:#fcf1e5;
 .rounded-corners (@radius: 5px) {
@@ -10,6 +10,7 @@
     border-radius: @radius;
 }
 #mediaquerieswatcher{
+	z-index: 1000;
 	font-family: "Arial";
 	font-size:14pt;
 	padding:20px;
