fixed bugs in getRules

--- a/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.css
+++ b/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.css
@@ -5,7 +5,7 @@
   padding: 20px;
   border: 1px solid #000;
   width: 300px;
-  position: absolute;
+  position: fixed;
   background-color: rgba(99, 30, 47, 0.7);
   border: 2px solid #993256;
   color: #fcf1e5;
