--- a/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.less
+++ b/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.less
@@ -16,7 +16,7 @@
 	padding:20px;
 	border:1px solid #000;
 	width:@boxWidth;
-	position:absolute;
+	position:fixed;
 	background-color: @mainColor;
 	border:2px solid @secondaryColor;
 	color: @fontColor;
