--- a/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.less
+++ b/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.less
@@ -22,7 +22,9 @@
 	font-size:11pt;
 	padding:20px;
 	width:@boxWidth;
-	position:fixed;
+	position:absolute;
+	top:20px;
+	left:20px;
 	background-color: @mainColor;
 	border:1px solid @secondaryColor;
 	color: @fontColor;
