--- a/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.less
+++ b/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.less
@@ -37,6 +37,9 @@
 		}
 	}
 	.rounded-corners(3px);
+	&.fixedpositioing.fixed{
+		position: fixed;
+	}
 	&.top-left{
 		left:20px;
 		top:20px;
@@ -115,6 +118,7 @@
 		color: @fontColor2;
 		div{
 			color: @fontColor1;
+			padding-left:12px;
 		}
 	}
 }
