--- a/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.css
+++ b/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.css
@@ -23,7 +23,7 @@
 #mediaquerieswatcher div span {
   color: #81cccf;
 }
-#mediaquerieswatcher.fixedpositioing {
+#mediaquerieswatcher.fixedpositioning.fixed {
   position: fixed;
 }
 #mediaquerieswatcher.top-left {
