--- a/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.less
+++ b/jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.less
@@ -37,7 +37,7 @@
 		}
 	}
 	.rounded-corners(3px);
-	&.fixedpositioing.fixed{
+	&.fixedpositioning.fixed{
 		position: fixed;
 	}
 	&.top-left{
@@ -93,7 +93,7 @@
 			cursor:pointer;
 			width:15px;
 			height:15px;
-			paddind:1px;
+			padding:1px;
 			border:1px solid #fff;
 			float:left; 
 			margin-left:15px;
