--- a/examples/styles/less/main.less
+++ b/examples/styles/less/main.less
@@ -1,5 +1,38 @@
 @import "palette";
+@import url(http://fonts.googleapis.com/css?family=Merriweather);
+@import url(http://fonts.googleapis.com/css?family=Lato:900,700);
 
-body{
-	background: @darkPrimaryColor;
+.font-header { font-family: 'Lato', sans-serif; font-weight: 900; text-transform: uppercase;}
+.font-body { font-family: 'Merriweather', serif; }
+
+body,html{
+	padding: 0; margin: 0;
+	width: 100%; height: 100%;
+	font-size: 16px;
+	.font-body;
 }
+
+h1,h2,h3,h4,h5,h6{
+	.font-header;
+	text-align: center;
+}
+
+
+p{
+	font-size: .9em;
+	text-align: center;
+}
+
+pre {
+    font-family: monospace;
+    white-space: pre-wrap;
+    padding: 1em 0;
+    margin: 2em 0;
+    background: lighten(@dividerColor,20%);
+    text-align: left !important;
+    padding-left: 0px !important;
+    border-left:5px solid @dividerColor;
+}
+
+
+@import "custom";
