added github star

--- a/examples/styles/less/custom.less
+++ b/examples/styles/less/custom.less
@@ -4,8 +4,10 @@
 	height: 1px;
 	background: @textPrimaryColor;
 }
+.left{float:left;}
+.right{float:right;}
 .container-header{
-	background: @darkPrimaryColor;
+	background: @primaryColor;
 	padding: 0; margin: 0;
 	height: 300px;
 	display:table-cell;
@@ -20,6 +22,7 @@
 			color:@textPrimaryColor;	
 			padding-top: 15px;
 		}
+		iframe{margin:auto;}
 	}
 }
 .container-body{
@@ -31,4 +34,9 @@
 	h3{
 		margin: 25px 0;
 	}
+}
+
+footer{
+	background:@darkPrimaryColor;
+	color:@textPrimaryColor;
 }
